updated css fixed footer overlap

--- a/style.css
+++ b/style.css
@@ -8,13 +8,25 @@ body {
     color: #7b595f;
     font-family: 'Montserrat', sans-serif;
     color: white;
+    min-height: 100%;
 }
 
-.firstSection{
-  height: 100vh;
-  display: flex; 
+.contentWrapWFooter{
+  min-height: 100%;
+  display: flex;
   flex-direction: column;
-  align-items: center; 
+  justify-content: space-around;
+}
+
+.contentWrapSansFooter{
+  flex-grow: 1;
+}
+
+.titleSection{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 
@@ -49,10 +61,10 @@ body {
   height: 32px;
   position: absolute;
   top: -7px;
-  left: -5px; 
+  left: -5px;
   cursor: pointer;
-  opacity: 0; 
-  z-index: 2; 
+  opacity: 0;
+  z-index: 2;
   -webkit-touch-callout: none;
 }
 
@@ -63,14 +75,14 @@ body {
   height: 4px;
   margin-bottom: 5px;
   position: relative;
-  
+
   background: #cdcdcd;
   border-radius: 3px;
-  
+
   z-index: 1;
-  
+
   transform-origin: 4px 0px;
-  
+
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
               opacity 0.55s ease;
@@ -111,15 +123,15 @@ body {
   margin: -100px 0 0 -50px;
   padding: 50px;
   padding-top: 125px;
-  
+
   background: #ededed;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
 
-  
+
   transform-origin: 0% 0%;
   transform: translate(-100%, 0);
-  
+
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
@@ -162,17 +174,18 @@ h1 {
 main {
   display: flex;
   flex-direction: row;
-  height: 100vh;
+  min-height: 100vh;
   justify-content: space-around;
   font-size: 1.6rem;
-  /* font-weight: bold; */
   line-height: 1.3;
+  flex-grow: 1;
 }
 
 .mainSection{
   border: 1px solid #707070;
   box-sizing: border-box;
   padding: 20px;
+  margin: 20px;
 }
 
 .mainL, .mainR {
@@ -269,12 +282,12 @@ img {vertical-align: middle;}
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4} 
+  from {opacity: .4}
   to {opacity: 1}
 }
 
 @keyframes fade {
-  from {opacity: .4} 
+  from {opacity: .4}
   to {opacity: 1}
 }
 
@@ -286,7 +299,6 @@ img {vertical-align: middle;}
 
 #wiseWords{
   box-shadow: 10px 10px white;
-
 }
 
 #wiseWords > p {
@@ -324,6 +336,7 @@ footer {
   text-align: center;
   border-top: 1px solid grey;
   padding: 10px;
+  flex-shrink: 0;
 }
 
 .footerL{
@@ -346,4 +359,52 @@ footer {
 #ourNames{
   display: flex;
   flex-direction: column;
+}
+
+.footerWrap {
+  display: relative;
+}
+
+
+
+/* ***************************
+        MEDIA QUERIES
+*************************** */
+
+@media screen and (max-width: 600px){
+
+  body {
+      background-color: pink;
+  }
+  main {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 6em;
+    display: block;
+  }
+  .mainL, .mainR {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .mainSection{
+    display: block;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 900px){
+
+  body {
+      /* background-color: green; */
+  }
+
+@media (min-width: 901px) and (max-width: 1200px){
+
+    body {
+        /* background-color: blue; */
+    }
+
+  }
+
 }
